add link to website in index.html and ensure no text decoration in styles

--- a/style.css
+++ b/style.css
@@ -144,6 +144,9 @@ body {
 a{
     text-decoration: none;
 }
+a span{
+    text-decoration: none;
+}
 
 /* -----------Right-Side--------------- */
 
